Use QPlatformWindow's API as much as possible in QPA

When using highdpi, window->geometry != platformwindow->geometry.
In QPA we should use QPlatformWindow's API.

Fixes: QTBUG-102601
Change-Id: Ib4ff2edbc045cf441cd2d594d502875417eb4917
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>